--- a/dynamicdiv/index.html
+++ b/dynamicdiv/index.html
@@ -15,6 +15,7 @@
             width: 300px;
             height: 300px;
             border: 1px solid black;
+            box-shadow: gray 1px;
         }
     </style>
 </head>
@@ -27,7 +28,9 @@
     <label for="borde">Borde</label>
     <input type="range" id="borde" min="1" max="20">
     <label for="radius">Border Radius</label>
-    <input type="range" id="radius" min="1" max="500">
+    <input type="range" id="radius" min="0" max="500">
+    <label for="sombra">Sombra</label>
+    <input type="range" id="shadow" min="0" max="1">
     <script src="./app.js"></script>
 </body>
 </html>
