--- a/todoapp/index.html
+++ b/todoapp/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App de Tareas</title>
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container">
         <h1>App de Tareas</h1>
-        <input type="text" name="" id="tareatxt">
-        <button id="addtarea">Agregar Tarea</button>
+        <form id="myForm">
+            <input type="text" name="" id="tareatxt">
+            <button id="addtarea">Agregar Tarea</button>
+        </form>
         <div id="tareas">
-            
         </div>
     </div>
     <script src="./app.js"></script>
