--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Projects</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Ejercicios para practicar DOM</h1>
+    <div>
+        <a href="./todoapp/index.html"><button>Lista de Tareas</button></a>
+        <a href="./PpT/index.html"><Button>Piedra, Papel o Tijera</Button></a>
+    </div>
+    <div>
+        <a href="./game/index.html"><button>Snake</button></a>
+        <a href="./dynamicdiv/index.html"><Button>Div Dinamico</Button></a>
+    </div>
+    <div>
+        <a href="./dibujo/index.html"><Button>Dibujo</Button></a>
+        <a href="./colorsinput/index.html"><button>Colores con Inputs</button></a>
+    </div>
+    <div>
+        <a href="./colorsbg/index.html"><button>Colors BG</button></a>
+        <a href="./animadoSquare/index.html"><button>Cuadro Animado</button></a>
+    </div>
+    <div>
+        <a href="./animadoCircle/index.html"><button>Circulo Animado</button></a>
+        <a href="./animadoCircle2/index.html"><button>Circulo Animado 2</button></a>
+    </div>
+    <div>
+        <a href="./animado/index.html"><button>Rectangulo Animado</button></a>
+    </div>
 </body>
 </html>
