--- a/animadoCircle/index.html
+++ b/animadoCircle/index.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM Propiedades</title>
+    <title>Dibujo Halloween</title>
     <style>
         body {
-            width: 100vh;
+            width: 100vw;
             height: 100vh;
             display: grid;
             place-items: center;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            background-color: black;
+            color: white;
+            margin: 0;
         }
-        body div {
-            display: flex;
-            flex-direction: column;
+        #lienzo {
+            border: 1px solid black;
+            background-color: rgb(255, 255, 255);
         }
         .image-container {
         position: absolute;
@@ -31,17 +35,13 @@
     </style>
 </head>
 <body>
-    <div>
-        <div class="image-container">
-            <a href="../index.html"><img src="./images/home.png" alt="Home"></a>
-        </div>
-        <label for="red">Rojo</label>
-        <input type="range" id="red" min="0" max="255">
-        <label for="green">Verde</label>
-        <input type="range" id="green" min="0" max="255">
-        <label for="blue">Azul</label>
-        <input type="range" id="blue" min="0" max="255">
-        <h2>Color: <span></span></h2>
+    <div class="image-container">
+        <a href="../index.html"><img src="./images/home2.png" alt="Home"></a>
+    </div>
+    <div class="container">
+        <h1>Canva Animado Circulo</h1>
+        <canvas id="lienzo" width="600" height="400"></canvas>
+        <h1>RGB</h1>
     </div>
     <script src="./app.js"></script>
 </body>
