--- a/colorsbg/index.html
+++ b/colorsbg/index.html
@@ -12,9 +12,25 @@
             place-content: center;
             place-items: center;
         }
+        .image-container {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        width: 50px;
+        height: 50px;
+        overflow: hidden;
+        }
+        img {
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+        }
     </style>
 </head>
 <body>
+    <div class="image-container">
+        <a href="../index.html"><img src="./images/home.png" alt="Home"></a>
+    </div>
     <button id="btnchange">Cambia Color</button>
     <h2>Color: <span></span></h2>
     <script src="./app.js"></script>
