--- a/dibujo/index.html
+++ b/dibujo/index.html
@@ -19,9 +19,25 @@
             border: 1px solid black;
             background-color: rgb(142, 219, 255);
         }
+        .image-container {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        width: 50px;
+        height: 50px;
+        overflow: hidden;
+        }
+        img {
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+        }
     </style>
 </head>
 <body>
+    <div class="image-container">
+        <a href="../index.html"><img src="./images/home2.png" alt="Home"></a>
+	</div>
     <div class="container">
         <h1>Mi Dibujo con Canvas</h1>
         <canvas id="lienzo" width="600" height="400"></canvas>
