--- a/todoapp/index.html
+++ b/todoapp/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="image-container">
+        <a href="../index.html"><img src="./images/home.png" alt="Home"></a>
+    </div>  
     <div class="container">
         <h1>App de Tareas</h1>
         <form id="myForm">
